--- a/Projekat3/NLTKSharp/NLTKSharp/packages.config
+++ b/Projekat3/NLTKSharp/NLTKSharp/packages.config
@@ -1,6 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="IKVM" version="8.2.1" targetFramework="net48" />
   <package id="JsonSubTypes" version="1.2.0" targetFramework="net48" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net48" />
   <package id="RestSharp" version="106.6.10" targetFramework="net48" />
+  <package id="SharpZipLib" version="1.3.3" targetFramework="net48" />
+  <package id="Stanford.NLP.CoreNLP" version="4.5.0" targetFramework="net48" />
+  <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net48" />
+  <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net48" />
 </packages>
